@@ -38,6 +38,7 @@ import com.intuit.karate.driver.DriverOptions;
 import com.intuit.karate.driver.Key;
 import com.intuit.karate.graal.JsEngine;
 import com.intuit.karate.graal.JsLambda;
+import com.intuit.karate.graal.JsFunction;
 import com.intuit.karate.graal.JsValue;
 import com.intuit.karate.http.*;
 import com.intuit.karate.resource.Resource;
@@ -64,6 +65,9 @@ import java.util.function.BiConsumer;
 import java.util.function.Function;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
+
 import org.graalvm.polyglot.proxy.ProxyExecutable;
 import org.slf4j.LoggerFactory;
 
@@ -77,8 +81,6 @@ public class ScenarioEngine {
 
     private static final String KARATE = "karate";
     private static final String READ = "read";
-    private static final String DRIVER = "driver";
-    private static final String ROBOT = "robot";
     private static final String KEY = "Key";
 
     public static final String RESPONSE = "response";
@@ -94,6 +96,7 @@ public class ScenarioEngine {
     public static final String REQUEST = "request";
     public static final String REQUEST_URL_BASE = "requestUrlBase";
     public static final String REQUEST_URI = "requestUri";
+    public static final String REQUEST_PATH = "requestPath";
     private static final String REQUEST_PARAMS = "requestParams";
     public static final String REQUEST_METHOD = "requestMethod";
     public static final String REQUEST_HEADERS = "requestHeaders";
@@ -143,6 +146,10 @@ public class ScenarioEngine {
 
     protected static void remove() {
         THREAD_LOCAL.remove();
+    }
+
+    public JsEngine getJsEngine() {
+        return JS;
     }
 
     // engine ==================================================================
@@ -589,9 +596,8 @@ public class ScenarioEngine {
         }
         long startTime = System.currentTimeMillis();
         httpRequest.setStartTime(startTime); // this may be fine-adjusted by actual http client
-        if (hooks != null) {
-            hooks.forEach(h -> h.beforeHttpCall(httpRequest, runtime));
-        }
+        Collection<RuntimeHook> allHooks = getRuntimeHooks();
+        allHooks.forEach(h -> h.beforeHttpCall(httpRequest, runtime));
         try {
             response = requestBuilder.client.invoke(httpRequest);
         } catch (Exception e) {
@@ -615,9 +621,7 @@ public class ScenarioEngine {
         final long endTime = httpRequest.getEndTime();
         final long responseTime = endTime - startTime;
         response.setResponseTime(responseTime);
-        if (hooks != null) {
-            hooks.forEach(h -> h.afterHttpCall(httpRequest, response, runtime));
-        }
+        allHooks.forEach(h -> h.afterHttpCall(httpRequest, response, runtime));
         byte[] bytes = response.getBody();
         Object body;
         String responseType;
@@ -660,6 +664,12 @@ public class ScenarioEngine {
         }
     }
 
+    private List<RuntimeHook> getRuntimeHooks() {
+        return Stream.concat(hooks.stream(), Stream.of(requestBuilder.hook()))
+                .filter(Objects::nonNull)
+                .collect(Collectors.toList());
+    }
+
     private void httpInvokeWithRetries() {
         int maxRetries = config.getRetryCount();
         int sleep = config.getRetryInterval();
@@ -676,9 +686,10 @@ public class ScenarioEngine {
                     throw new RuntimeException(e);
                 }
             }
-            httpInvokeOnce();
+
             Variable v;
             try {
+                httpInvokeOnce();
                 v = evalKarateExpression(requestBuilder.getRetryUntil());
             } catch (Exception e) {
                 logger.warn("retry condition evaluation failed: {}", e.getMessage());
@@ -724,13 +735,76 @@ public class ScenarioEngine {
         }
     }
 
+    // non-http ================================================================
+    //
+    private static String getFactory(String channelType) {
+        switch (channelType) {
+            case Config.KAFKA:
+                return "io.karatelabs.karate.kafka.KafkaChannelFactory";
+            default:
+                throw new RuntimeException("unknown channel type");
+        }
+    }
+        
+    private Channel channel(String type) {
+        String factoryClass = getFactory(type);
+        try {
+            Class clazz = Class.forName(factoryClass);
+            ChannelFactory factory = (ChannelFactory) clazz.getDeclaredConstructor().newInstance();
+            Map<String, Object> options = config.getCustomOptions().get(type);
+            return factory.create(runtime, options);
+        } catch (KarateException ke) {
+            throw ke;
+        } catch (Exception e) {
+            String message = "cannot instantiate " + type + ", is 'karate-" + type + "' included as a maven / gradle dependency ? " + e.getMessage();
+            logger.error(message);
+            throw new RuntimeException(message, e);
+        }        
+    }
+        
+    public void produce(String type) {
+        Channel channel = channel(type);
+        channel.produce(runtime);
+    }
+    
+    public ChannelSession consume(String type, String topic) {
+        Channel channel = channel(type);
+        return channel.consume(runtime, topic);        
+    }
+    
+    public void register(String expression) {
+        Variable v = evalKarateExpression(expression);
+        Channel channel = channel("kafka");
+        Map<String, Object> map = v.getValue();
+        channel.register(runtime, map);
+    }       
+    
+    public void schema(String exp) {
+        Variable v = evalKarateExpression(exp);
+        requestBuilder.setSchema(v.getAsString());
+    }
+    
+    public void topic(String exp) {
+        Variable v = evalKarateExpression(exp);
+        requestBuilder.setTopic(v.getAsString());
+    }
+    
+    public void key(String exp) {
+        Variable v = evalKarateExpression(exp);
+        requestBuilder.setKey(v.getAsString());
+    }    
+
     // http mock ===============================================================
     //
     public void mockProceed(String requestUrlBase) {
-        String urlBase = requestUrlBase == null ? vars.get(REQUEST_URL_BASE).getValue() : requestUrlBase;
-        String uri = vars.get(REQUEST_URI).getValue();
-        String url = uri == null ? urlBase : urlBase + "/" + uri;
-        requestBuilder.url(url);
+        String urlBase;
+        if (requestUrlBase == null) {
+            urlBase = vars.get(REQUEST_URL_BASE).getValue();
+        } else {
+            urlBase = requestUrlBase;
+        }
+        requestBuilder.url(urlBase);
+        requestBuilder.path(vars.get(REQUEST_PATH).getValue());
         requestBuilder.params(vars.get(REQUEST_PARAMS).getValue());
         requestBuilder.method(vars.get(REQUEST_METHOD).getValue());
         requestBuilder.headers(vars.get(REQUEST_HEADERS).<Map>getValue());
@@ -787,7 +861,7 @@ public class ScenarioEngine {
             logger.error("listen timed out: {}", e + "");
         }
         SIGNAL = new CompletableFuture();
-        synchronized (JsValue.LOCK) {
+        synchronized (JsFunction.LOCK) {
             setHiddenVariable(LISTEN_RESULT, listenResult);
             logger.debug("exit listen state with result: {}", listenResult);
         }
@@ -871,7 +945,7 @@ public class ScenarioEngine {
         // re-create driver within a test if needed
         // but user is expected to call quit() OR use the driver keyword with a JSON argument
         if (driver == null || driver.isTerminated() || v.isMap()) {
-            Map<String, Object> options = config.getDriverOptions();
+            Map<String, Object> options = config.getCustomOptions().get(Config.DRIVER);
             if (options == null) {
                 options = new HashMap();
             }
@@ -889,7 +963,7 @@ public class ScenarioEngine {
     public void robot(String exp) {
         Variable v = evalKarateExpression(exp);
         if (robot == null) {
-            Map<String, Object> options = config.getRobotOptions();
+            Map<String, Object> options = config.getCustomOptions().get(Config.ROBOT);
             if (options == null) {
                 options = new HashMap();
             }
@@ -900,7 +974,7 @@ public class ScenarioEngine {
             }
             try {
                 Class clazz = Class.forName("com.intuit.karate.robot.RobotFactory");
-                PluginFactory factory = (PluginFactory) clazz.newInstance();
+                PluginFactory factory = (PluginFactory) clazz.getDeclaredConstructor().newInstance();
                 robot = factory.create(runtime, options);
             } catch (KarateException ke) {
                 throw ke;
@@ -919,24 +993,24 @@ public class ScenarioEngine {
 
     public void setDriver(Driver driver) {
         this.driver = driver;
-        setHiddenVariable(DRIVER, driver);
+        setHiddenVariable(Config.DRIVER, driver);
         if (robot != null) {
             logger.warn("'robot' is active, use 'driver.' prefix for driver methods");
             return;
         }
-        autoDef(driver, DRIVER);
+        autoDef(driver, Config.DRIVER);
         setHiddenVariable(KEY, Key.INSTANCE);
     }
 
     public void setRobot(Plugin robot) { // TODO unify
         this.robot = robot;
         // robot.setContext(this);
-        setHiddenVariable(ROBOT, robot);
+        setHiddenVariable(Config.ROBOT, robot);
         if (driver != null) {
             logger.warn("'driver' is active, use 'robot.' prefix for robot methods");
             return;
         }
-        autoDef(robot, ROBOT);
+        autoDef(robot, Config.ROBOT);
         setHiddenVariable(KEY, Key.INSTANCE);
     }
 
@@ -1213,6 +1287,10 @@ public class ScenarioEngine {
 
     public Object getVariable(String key) {
         return JS.get(key).getValue();
+    }
+
+    public boolean hasVariable(String key) {
+        return JS.bindings.hasMember(key);
     }
 
     public void setVariable(String key, Object value) {
@@ -1758,7 +1836,7 @@ public class ScenarioEngine {
     }
 
     public Match.Result match(Match.Type matchType, Object actual, Object expected) {
-        return Match.execute(JS, matchType, actual, expected);
+        return Match.execute(JS, matchType, actual, expected, config.isMatchEachEmptyAllowed());
     }
 
     private static final Pattern VAR_AND_PATH_PATTERN = Pattern.compile("\\w+");
